--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
-    "axios": "^1.7.3",
+    "axios": "^1.3.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "scheduler": "^0.23.2",
     "styled-components": "^6.1.12",
+    "use-context-selector": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
